@@ -2,13 +2,14 @@ Revision history for Perl extension Finance-Robinhood
 
 {{$NEXT}}
 
-    - Coerced dates are now parsed correctly
-    - decode_json is wrapped by Try::Tiny
+    - New Finance::Robinhood::Portfolio class for current and historical info
     - New ::Robinhood->markets() method to get a paginated list of supported
         markets as Finance::Robinhood::Market objects
     - New ::Robinhood::Market->new(...) constructor to get an object representing a
         specific exchange. Use the ISO 10383 MIC. ...see the docs for more.
     - New ::Order->refresh() method
+    - Fix: Coerced dates are now parsed correctly
+    - Fix: JSON decoder is now wrapped by Try::Tiny
 
 0.09 2016-08-12T01:24:57Z
 
